# libtess2

./: CMakeLists.txt  conanfile.py
